03-Terraform-Language-Basics/terraform-manifests/c4-firewallrules.tf
# Firewall Rule: SSH
resource "google_compute_firewall" "fw_ssh" {
  name = "fwrule-allow-ssh22"
  allow {
    ports = ["22"]
    protocol = "tcp"
  }
  direction = "INGRESS"
  network = google_compute_network.myvpc.id
  priority = 1000
  source_ranges = ["0.0.0.0/0"]
  target_tags = ["ssh-tag"]
}

# Firewall Rule: HTTP Port 80
resource "google_compute_firewall" "fw_http" {
  name = "fwrule-allow-http80"
  allow {
    ports = ["80","8080"]
    protocol = "tcp"
  }
  direction = "INGRESS"
  network = google_compute_network.myvpc.id
  priority = 1000
  source_ranges = ["0.0.0.0/0"]
  target_tags = ["webserver-tag"]
}
